--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: styleguide-action
+author: Ivan Grekov
+description: build visual documentation on github pages for your React.JS UI component library based on Styleguide
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
