--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ on:
     runs-on: ubuntu-latest
    defaults:
       NODE_VERSION: 12.18.3
-      FOLDER_NAME: Docs
+      _PATH_FOLDER_NAME: Docs
    env:
       NODE_VERSION: 12.18.3
       _PATH_FOLDER_NAME: Docs
